--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,11 @@
   "otherPortsAttributes": {
     "onAutoForward": "ignore"
   },
+  "hostRequirements": {
+    "cpus": 12,
+    "memory": "16gb",
+    "storage": "128gb"
+  },
   "dockerComposeFile": "codespaces.yml",
   "initializeCommand": "docker system prune --all --force"
 }
